# stori-take-home-test

./: .gitignore  .pre-commit-config.yaml  README.md  bitbucket-pipelines.yml  pyproject.toml
stori/: api.py  config.py  content.py  crud.py  database.py  generator.py  helpers.py  sender.py
stori/templates/: email.html
